objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Geolocation__c</fullName>
        <label>FSLDemoTools Original Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Name__c</fullName>
        <label>FSLDemoTools Original Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Timezone__c</fullName>
        <label>FSLDemoTools Original Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSM_Contact_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Center</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>Description</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <listViews>
        <fullName>Workforce_Engagement_Territories</fullName>
        <columns>Name</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedBy</columns>
        <columns>ParentTerritory</columns>
        <columns>OperatingHours</columns>
        <columns>IsActive</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OperatingHours</field>
            <operation>contains</operation>
            <value>Workforce</value>
        </filters>
        <label>Workforce Engagement Territories</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISCHANGED(  FSLDemoTools_Original_Geolocation__Latitude__s  ),ISCHANGED(   FSLDemoTools_Original_Geolocation__Longitude__s   )   , ISCHANGED(  FSLDemoTools_Original_Name__c  )  , ISCHANGED(  FSLDemoTools_Original_Timezone__c  )  )</errorConditionFormula>
        <errorMessage>You can&apos;t edit the FSLDemoTools Master data fields</errorMessage>
    </validationRules>
</CustomObject>